--- a/css/style.css
+++ b/css/style.css
@@ -468,40 +468,31 @@ table {
     /* background-color: #4fc24f; */
 }
 
-td {
-    position: relative;
-    /* border-radius: 30px; */
-}
 
-.port-cell {
+
+.imagem{
     position: relative;
-    text-align: center;
-    max-width: 340px;
-    max-height: 340px;
+    width: 340px;
+    height: 340px; 
+    border: 3px solid #000;
+    overflow: hidden;
     border-radius: 20px;
-    padding: 0vh 0vw 0vh 0vw;
-    margin: 0vh 0vw 4vh 2vw;
+}
+.port-cell {
+    text-align: center;
+
     width: 100%;
-    height: 100%;
 }
 
 .port-cell:hover {
-    border-radius: 14px;
-    max-width: 340px;
-    max-height: 340px;
-    width: 100%;
-    height: 100%;
-    /* padding: 0; */
-    margin: 4vh 2vw 4vh 2vw;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    transition: .5s;
-}
 
+}
+/*
 .port-cell::after {
     margin: 0;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     transition: .5s;
-}
+}*/
 
 #footer-normal {
     position: relative;
