--- a/css/style.css
+++ b/css/style.css
@@ -468,19 +468,22 @@ table {
     /* background-color: #4fc24f; */
 }
 
-
-
-.imagem{
-    position: relative;
-    width: 340px;
-    height: 340px; 
-    border: 3px solid #000;
-    overflow: hidden;
-    border-radius: 20px;
+.grid-container {
+  display: grid;
+  grid-gap: 50px 10px;
+  grid-template-columns: auto auto auto;
+  padding: 10px;
 }
+
+.grid-item {
+  width: 340px;
+  height: 340px; 
+  overflow: hidden;
+  border-radius: 20px;
+}
+
 .port-cell {
     text-align: center;
-
     width: 100%;
 }
 
