--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
 }
 
 
-/* PÁGINA SOBRE/INDEX */
+/* PÁGINA INÍCIO/INDEX */
 
 body {
     margin: 0;
@@ -41,14 +41,6 @@ footer {
     background: rgba(0, 0, 0, 0.4);
     padding: 0 6.6vw;
     box-sizing: border-box;
-}
-
-section.sec1 {
-    width: 100%;
-    height: 100vh;
-    box-sizing: border-box;
-    background: url('images/bg-1.png');
-    background-size: cover;
 }
 
 #copyright {
@@ -81,6 +73,7 @@ nav.brand {
 }
 
 #redes ul li a {
+    width: 2vw;
     padding: .8vh 0 .8vh 2.5vw;
     color: rgb(255, 255, 255);
 }
@@ -111,8 +104,8 @@ ul li {
 
 ul li a {
     position: relative;
-    display: block;
-    height: 70px;
+    display: inline;
+    /* height: 70px; */
     font-family: 'Avenir', sans-serif;
     line-height: 70px;
     padding: 0 0 0 3vw;
@@ -145,43 +138,241 @@ ul li a:before {
 }
 
 
+/* NAVBAR PRAGINA PRINCIPAL */
+
+.topnav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 9.8vh;
+    /* padding: 0 7.6vw; */
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 10;
+}
+
+.topnav a {
+    /* float: right; */
+    /* margin: 0px 0 0 -15px; */
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 1em;
+    font-family: 'Avenir', sans-serif;
+}
+
+.topnav a:hover {
+    /* background-color: #ddd; */
+    color: #FF4B59;
+}
+
+#navbar-firstitem {
+    float: left;
+    margin: 0.5vh 0 0 7.6vw;
+    font-size: 1.5em;
+    font-family: 'Lobster', sans-serif;
+}
+
+.navbar-items {
+    float: right;
+    /* margin: 0 20vw 0 0; */
+    margin: 10px 7.6vw 0 -5.6vw;
+    /* float: right; */
+}
+
+.active {
+    color: white;
+}
+
+.topnav .icon {
+    display: none;
+}
+
+@media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {
+        display: none;
+    }
+    .topnav a.icon {
+        float: right;
+        display: block;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .topnav.responsive {
+        position: relative;
+    }
+    .topnav.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+    .topnav.responsive .navbar-items {
+        /* color: blue; */
+        margin: 10vh 0 0vh 10vw;
+        padding: 0;
+    }
+}
+
+
+/* NAVBAR PRAGINA PRINCIPAL */
+
+@media screen and (max-width: 600px) {
+    nav li {
+        /* margin: 10px -20px; */
+        width: 120px;
+        border-bottom: none;
+        height: 10px;
+        line-height: 90px;
+        padding: 0 2px 0 0;
+        font-size: 0.6em;
+        display: block;
+        color: #ffffff;
+        margin-right: -8px;
+    }
+    .brand h2 {
+        width: 120px;
+        border-bottom: none;
+        height: 30px;
+        line-height: 60px;
+        font-size: 1em;
+        /* display: block; */
+        color: #ffffff;
+        margin-right: -8px;
+    }
+    .brand h2:hover {
+        color: #FF4B59;
+    }
+    nav {
+        height: 100px;
+        background: rgba(0, 0, 0, 0.5);
+    }
+    .grid-container-port {
+        /* position: relative; */
+        margin: 20vh;
+    }
+    #copyright,
+    #cporyright2 {
+        font-size: .6em;
+        /* margin: 10px 20px; */
+    }
+}
+
+
+/* SLIDER */
+
+.slider {
+    width: 100%;
+    height: 100vh;
+    box-sizing: border-box;
+    position: relative;
+}
+
+.slider li {
+    list-style: none;
+    position: absolute;
+}
+
+.slider li img {
+    margin: 0;
+    height: 100vh;
+    width: 100vw;
+    vertical-align: top;
+}
+
+.slider input {
+    display: none;
+}
+
+.slider label {
+    position: absolute;
+    /* background-color: #FF4B59; */
+    background-color: rgb(123, 11, 138);
+    margin: 80vh 45vw 5vh 45vw;
+    /* bottom: 30vh; */
+    cursor: pointer;
+    display: block;
+    height: 2vh;
+    width: auto;
+    position: absolute;
+    width: 10px;
+    z-index: 10;
+}
+
+.slider li:nth-child(1) label {
+    left: 10px;
+}
+
+.slider li:nth-child(2) label {
+    left: 40px;
+}
+
+.slider li:nth-child(3) label {
+    left: 70px;
+}
+
+.slider img {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.slider li input:checked~img {
+    opacity: 1;
+    visibility: visible;
+    z-index: 10;
+}
+
+
 /* PÁGINA SOBRE */
 
 .sobre1 {
     color: #95989A;
-    padding: 25vh 7vw 10vw 7vw;
+    margin: 25vh 7vw 10vw 7vw;
+    padding: 5vh 0 0 0;
     font-family: 'Avenir Book', sans-serif;
 }
 
 .sobre2 {
     color: #95989A;
-    padding: 5vh 7vw 10vw 7vw;
+    margin: 5vh 7vw 10vw 7vw;
+    padding: 5vh 0 0 0;
     font-family: 'Avenir Book', sans-serif;
 }
 
 .sobre3 {
     color: #95989A;
-    padding: 5vh 7vw 10vw 7vw;
+    margin: 5vh 7vw 10vw 7vw;
+    padding: 5vh 0 0 0;
     font-family: 'Avenir Book', sans-serif;
 }
 
 .sobre4 {
     color: #95989A;
-    padding: 5vh 7vw 10vw 7vw;
+    margin: 5vh 7vw 10vw 7vw;
+    padding: 5vh 0 0 0;
     font-family: 'Avenir Book', sans-serif;
 }
 
 .sobre1 h1,
 .sobre3 h1 {
-    font-size: 8vh;
+    /* font-size: 3rem; */
+    font-size: 2rem;
     font-family: 'Avenir', sans-serif;
     color: #696A6A;
 }
 
 .sobre1 p,
 .sobre3 p {
-    font-size: 2.8vh;
-    padding: 10px 0vh 0px 0px;
+    font-size: 1.3rem;
+    padding: 4vh 0vh 0 0;
 }
 
 .sobre1 p b,
@@ -192,15 +383,15 @@ ul li a:before {
 
 .sobre2 h1,
 .sobre4 h1 {
-    font-size: 8vh;
+    font-size: 2rem;
     font-family: 'Avenir', sans-serif;
     color: #696A6A;
 }
 
 .sobre2 p,
 .sobre4 p {
-    font-size: 2.8vh;
-    padding: 10px 80vh 0px 0px;
+    font-size: 1.3rem;
+    padding: 10px 0vh 0 0;
 }
 
 .sobre2 p b,
@@ -212,16 +403,16 @@ ul li a:before {
 #img-perfil,
 #img-skills {
     float: left;
-    padding: 0px 100px 0px 0px;
-    height: 50vh;
+    padding: 0px 10vw 5vh 0px;
+    width: 25vw;
 }
 
 #img-hobbies,
 #img-exp {
     float: right;
-    padding: 0px 0px 100px 0px;
-    max-width: 100%;
-    height: 300px;
+    padding: 0 0 5vh 10vw;
+    /* max-width: 100%; */
+    width: 25vw;
 }
 
 #redes2 {
@@ -285,7 +476,7 @@ form {
     margin-bottom: 3em;
 }
 
-label {
+.contact {
     color: #BFC1C3;
     font-size: 15px;
     font-weight: normal;
@@ -326,13 +517,8 @@ textarea {
     border: none;
     width: 100px;
     border-radius: 4px;
-    /* margin-right: 50px; */
-    /* background-color: rgba(0, 0, 0, 0.075); */
-    /* background-color: rgb(231, 231, 231); */
     color: #FFF;
     background-color: #95989A;
-    ;
-    /* font-family: 'Avenir', sans-serif; */
     font-weight: bold;
 }
 
@@ -410,33 +596,36 @@ textarea:focus~.bar::after {
 
 /* PORTFOLIO MENU-1*/
 
-section.sec-port {
-    /* width: 100vw;
-    height: 100vh; */
-    position: absolute;
-    margin: 9.8vh 0 0vh 0;
+.grid-container-port {
+    height: 80.2vh;
+    position: fixed;
+    display: grid;
+    margin: 9.8vh 0 10vh 0vw;
     padding: 0;
-    box-sizing: border-box;
-    /* background-size: cover; */
+    grid-column-gap: 0vw;
+    grid-row-gap: 50px;
+    grid-template-columns: auto auto auto;
 }
 
-.sec-port ul li a {
-    position: relative;
-    display: block;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+.grid-item-port {
+    /* border: 1px solid rgba(0, 0, 0, 0.8); */
+    /* margin: 0vh 0 5vh 0; */
+    padding: 0px;
+    /* font-size: 30px; */
+    overflow: hidden;
 }
 
-#btn-ilustra,
-#btn-design,
-#btn-modelagem {
-    /* float: left; */
-    height: auto;
-    width: 33.4vw;
-    /* width: 33.3vw; */
-    margin: 0;
+.port-cell-2 {
+    text-align: center;
+    height: 80.2vh;
+    cursor: pointer;
+    transition: 0.2s;
     padding: 0;
+    margin: 0;
+}
+
+.grid-item-port:hover {
+    opacity: 0.3;
 }
 
 
@@ -452,7 +641,7 @@ section.sec-port {
 
 .breadcrumb {
     float: left;
-    display: block;
+    /* display: block; */
     height: 70px;
     font-family: 'Avenir', sans-serif;
     line-height: 70px;
@@ -490,42 +679,13 @@ section.sec-port {
     font-family: 'Avenir', sans-serif;
 }
 
-
-/* table {
-    position: static;
-    text-align: center;
-    width: 0;
-    border: 0;
-    padding: 0;
-    margin: 0vh 0vw 0vh 2vw;
-}
-
-td {
-    position: relative;
-} */
-
-
-/* .port-cell {
-    position: relative;
-    text-align: center;
-    max-width: 340px;
-    max-height: 340px;
-    border-radius: 5%;
-    width: 100%;
-    height: 100%;
-} */
-
 .grid-container {
     display: grid;
     margin: 8vh 0 0 0vw;
     padding: 0;
     grid-column-gap: 3vw;
     grid-row-gap: 0;
-    /* grid-gap: 0vh 3vw; */
     grid-template-columns: auto auto auto;
-    /* padding: 10px; */
-    /* margin: 10vh 0 2vh 4vw; */
-    /* background-color: #FF4B59; */
 }
 
 .grid-container:hover {
@@ -536,8 +696,6 @@ td {
     width: 26vw;
     height: 70%;
     padding: 0;
-    /* width: 340px;
-    height: 340px; */
     overflow: hidden;
     border-radius: 15px;
 }
@@ -546,17 +704,6 @@ td {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     transition: .5s;
 }
-
-
-/* .grid-item:hover {
-    border-radius: 5%;
-    max-width: 340px;
-    max-height: 340px;
-    width: auto;
-    height: 50%;
-    padding: 0;
-    transition: .5s;
-} */
 
 .port-cell {
     text-align: center;
@@ -567,46 +714,18 @@ td {
     margin: 0;
 }
 
-
-/* .port-cell:hover {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    transition: .5s;
-} */
-
-
-/* .container-jobs {
-    display: inline-block;
-    position: relative;
-    font-family: 'Avenir', sans-serif;
-    margin: 0vh 0vw 0vw 0vw;
-    padding: 4vh 2vw 4vh 2vw;
-    font-size: 4vh;
-} */
-
 figcaption {
-    position: absolute;
-    float: center;
-    top: 41vh;
-    text-align: center;
+    position: relative;
+    float: left;
+    top: 44vh;
+    text-align: left;
     font-family: 'Avenir', sans-serif;
     font-size: 4vh;
-    margin: 0vh 0 0 2vw;
-    padding: 5.2vh 2vw 4vh 1vw;
-    color: rgb(255, 0, 55);
-    text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.6);
-    /* background-color: #FF4B59; */
+    margin: -15vh 0px 0vh 0vw;
+    padding: 1px 0vw 1px 2vw;
+    color: rgb(255, 255, 255);
+    background-color: rgba(0, 0, 0, 0.527);
 }
-
-
-/* .container-jobs:hover {
-    border-radius: 5%;
-    max-width: 340px;
-    max-height: 340px;
-    width: auto;
-    height: 50%;
-    padding: 0;
-    transition: .5s;
-} */
 
 #footer-normal {
     position: relative;
