--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
 }
 
 
-/* PÁGINA INÍCIO/INDEX */
+/* PÁGINA SOBRE/INDEX */
 
 body {
     margin: 0;
@@ -135,135 +135,6 @@ ul li a:before {
     transform-origin: right;
     transform: scaleX(0);
     transition: transform .5s;
-}
-
-
-/* NAVBAR PRAGINA PRINCIPAL */
-
-.topnav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 9.8vh;
-    /* padding: 0 7.6vw; */
-    overflow: hidden;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 10;
-}
-
-.topnav a {
-    /* float: right; */
-    /* margin: 0px 0 0 -15px; */
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 1em;
-    font-family: 'Avenir', sans-serif;
-}
-
-.topnav a:hover {
-    /* background-color: #ddd; */
-    color: #FF4B59;
-}
-
-#navbar-firstitem {
-    float: left;
-    margin: 0.5vh 0 0 7.6vw;
-    font-size: 1.5em;
-    font-family: 'Lobster', sans-serif;
-}
-
-.navbar-items {
-    float: right;
-    /* margin: 0 20vw 0 0; */
-    margin: 10px 7.6vw 0 -5.6vw;
-    /* float: right; */
-}
-
-.active {
-    color: white;
-}
-
-.topnav .icon {
-    display: none;
-}
-
-@media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {
-        display: none;
-    }
-    .topnav a.icon {
-        float: right;
-        display: block;
-    }
-}
-
-@media screen and (max-width: 600px) {
-    .topnav.responsive {
-        position: relative;
-    }
-    .topnav.responsive .icon {
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-    .topnav.responsive a {
-        float: none;
-        display: block;
-        text-align: left;
-    }
-    .topnav.responsive .navbar-items {
-        /* color: blue; */
-        margin: 10vh 0 0vh 10vw;
-        padding: 0;
-    }
-}
-
-
-/* NAVBAR PRAGINA PRINCIPAL */
-
-@media screen and (max-width: 600px) {
-    nav li {
-        /* margin: 10px -20px; */
-        width: 120px;
-        border-bottom: none;
-        height: 10px;
-        line-height: 90px;
-        padding: 0 2px 0 0;
-        font-size: 0.6em;
-        display: block;
-        color: #ffffff;
-        margin-right: -8px;
-    }
-    .brand h2 {
-        width: 120px;
-        border-bottom: none;
-        height: 30px;
-        line-height: 60px;
-        font-size: 1em;
-        /* display: block; */
-        color: #ffffff;
-        margin-right: -8px;
-    }
-    .brand h2:hover {
-        color: #FF4B59;
-    }
-    nav {
-        height: 100px;
-        background: rgba(0, 0, 0, 0.5);
-    }
-    .grid-container-port {
-        /* position: relative; */
-        margin: 20vh;
-    }
-    #copyright,
-    #cporyright2 {
-        font-size: .6em;
-        /* margin: 10px 20px; */
-    }
 }
 
 
@@ -643,6 +514,7 @@ textarea:focus~.bar::after {
     float: left;
     /* display: block; */
     height: 70px;
+    font-size: 1em;
     font-family: 'Avenir', sans-serif;
     line-height: 70px;
     margin: 3vh 0 0 0;
@@ -656,7 +528,7 @@ textarea:focus~.bar::after {
 .arrow {
     float: left;
     display: block;
-    height: 70px;
+    height: 20px;
     font-family: 'Avenir', sans-serif;
     line-height: 70px;
     margin: 3vh -18px;
@@ -675,7 +547,7 @@ textarea:focus~.bar::after {
     margin: 2vh 0 0 0;
     padding: 0vh 4vw;
     color: #696A6A;
-    font-size: 6vh;
+    font-size: 2.5em;
     font-family: 'Avenir', sans-serif;
 }
 
@@ -870,5 +742,49 @@ figcaption {
 @media only screen and (max-width: 700px) {
     .modal-content {
         width: 100%;
+    }
+}
+
+
+/* NAVBAR RESPONSIVA */
+
+@media screen and (max-width: 600px) {
+    nav li {
+        /* margin: 10px -20px; */
+        width: 120px;
+        border-bottom: none;
+        height: 10px;
+        line-height: 90px;
+        padding: 0 2px 0 0;
+        font-size: 0.6em;
+        display: block;
+        color: #ffffff;
+        margin-right: -8px;
+    }
+    .brand h2 {
+        width: 120px;
+        border-bottom: none;
+        height: 30px;
+        line-height: 60px;
+        font-size: 1em;
+        /* display: block; */
+        color: #ffffff;
+        margin-right: -8px;
+    }
+    .brand h2:hover {
+        color: #FF4B59;
+    }
+    nav {
+        height: 100px;
+        background: rgba(0, 0, 0, 0.5);
+    }
+    .grid-container-port {
+        /* position: relative; */
+        margin: 20vh;
+    }
+    #copyright,
+    #cporyright2 {
+        font-size: .6em;
+        /* margin: 10px 20px; */
     }
 }
