--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,6 @@ ul li {
 ul li a {
     position: relative;
     display: inline;
-    /* height: 70px; */
     font-family: 'Avenir', sans-serif;
     line-height: 70px;
     padding: 0 0 0 3vw;
@@ -165,10 +164,8 @@ ul li a:before {
 
 .slider label {
     position: absolute;
-    /* background-color: #FF4B59; */
     background-color: rgb(123, 11, 138);
     margin: 80vh 45vw 5vh 45vw;
-    /* bottom: 30vh; */
     cursor: pointer;
     display: block;
     height: 2vh;
@@ -234,7 +231,6 @@ ul li a:before {
 
 .sobre1 h1,
 .sobre3 h1 {
-    /* font-size: 3rem; */
     font-size: 2rem;
     font-family: 'Avenir', sans-serif;
     color: #696A6A;
@@ -282,7 +278,6 @@ ul li a:before {
 #img-exp {
     float: right;
     padding: 0 0 5vh 10vw;
-    /* max-width: 100%; */
     width: 25vw;
 }
 
@@ -479,10 +474,7 @@ textarea:focus~.bar::after {
 }
 
 .grid-item-port {
-    /* border: 1px solid rgba(0, 0, 0, 0.8); */
-    /* margin: 0vh 0 5vh 0; */
     padding: 0px;
-    /* font-size: 30px; */
     overflow: hidden;
 }
 
@@ -496,7 +488,8 @@ textarea:focus~.bar::after {
 }
 
 .grid-item-port:hover {
-    opacity: 0.3;
+    background-color: #FF4B59;
+
 }
 
 
@@ -507,12 +500,10 @@ textarea:focus~.bar::after {
     width: 84vw;
     margin: 10vh 6vw 6vh 8vw;
     padding: 0;
-    /* background-color: #4fc24f; */
 }
 
 .breadcrumb {
     float: left;
-    /* display: block; */
     height: 70px;
     font-size: 1em;
     font-family: 'Avenir', sans-serif;
